argocd/qbittorrent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8088
          volumeMounts:
            - name: config
              mountPath: /config
            - name: torrents
              mountPath: /downloads
          readinessProbe:
            httpGet:
              path: /
              port: 8088
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8088
            initialDelaySeconds: 60
            periodSeconds: 30
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bittorrent-config-pvc
        - name: torrents
          persistentVolumeClaim:
            claimName: torrents-pvc
