argocd/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-svc
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
    - name: webui
      port: 8088
      targetPort: 8088
