argocd/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik
  rules:
    - host: bittorrent.zion.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent-svc
                port:
                  name: webui
